# swindow

./: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json  smake.lua
include/: event.hpp  eventpipeline.hpp  internal.hpp  swindow.hpp  window.hpp
include/platform/osx/: osx_eventpipeline.hpp  osx_window.hpp
include/swindow/: swindow.hpp
include/swindow/internal/: event.hpp  event_loop.hpp  event_queue.hpp  eventpipeline.hpp  events.hpp  global.hpp  window.hpp
include/swindow/internal/platform/osx/: app_state.hpp  event_queue.hpp  eventpipeline.hpp  window.hpp
src/: eventpipeline.hpp  global.cpp  internal.cpp  internal.hpp  main.cpp  window.hpp
src/platform/osx/: app_state.mm  event_loop.mm  event_queue.mm  eventpipeline.mm  osx_eventpipeline.hpp  osx_eventpipeline.mm  osx_window.hpp  osx_window.mm  window.mm
